# compakt

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.notebooks/: chat.ipynb  clustering.ipynb  compakt.ipynb  summarizer.ipynb
examples/: async_basic_usage.py  basic_usage.py  batch_summarize_data_to_output.py
output/: Group_Project.json  Group_Project_summary.md  document_structure.json  final_summary.md  markdown_tree.json
scripts/: check.py  client.py
src/azure_functions/: function_app.py  local.settings.json  requirements.txt
src/backend/: local.settings.json  main.py  pipeline_state.py  processing.py  validation.py  worker.py  ws_manager.py
src/compakt/: __init__.py  client.py  containers.py
src/compakt/core/: exceptions.py  models.py  utils.py
src/compakt/core/adapters/: in_memory_vector_index.py  md_it_tree_parser.py  openai_document_structure_resolver.py  openai_embeddings.py  openai_summarizer.py  tiktoken_encoder.py
src/compakt/core/adapters/embeddings/: openai_embeddings.py  voyageai_embeddings.py
src/compakt/core/interfaces/: document_reader.py  document_structure_resolver.py  embeddings.py  encoder.py  file_reader.py  md_tree_parser.py  strategy.py  summarizer.py  text_splitters.py  vector_index.py
src/compakt/strategies/: __init__.py  brute_force_unstructured.py  fallback_unstructured.py  structured_markdown.py
tests/: test_backend_validation.py  test_compakt_integration.py  test_fallback_unstructured_strategy.py  test_structured_markdown_strategy.py  test_utils.py
(+3 files in other folders)
